# TPPM

./: .gitignore  LICENSE  LICENSE.before_paper_alignment  README.md  THIRD_PARTY_LICENSES.md  pyproject.toml  skills-lock.json  常用命令.md
.github/workflows/: tests.yml
Ablation/scripts/: locomo_ablation_eval.py  locomo_ablation_extract.py  locomo_ablation_summarize.py  phase2_ablation.py  phase2_ablation_v2.py  phase3_ablation.py  phase3_ablation_v2.py  psydial_ablation_banks.py  psydial_ablation_generate.py  psydial_ablation_score.py  rerun_ablation_suggest.py  rerun_flat_pool_recall.py  rerun_full_tppm_suggest.py  summarize.py  summarize_v2.py
Figure-data/session_sensitivity/: phase1_extract.py  phase2_eval_qa.py  phase3_plot.py  run_all.py
Mini-Agent-5-1/: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT_CN.md  CONTRIBUTING.md  CONTRIBUTING_CN.md  MANIFEST.in  README.md  README_CN.md  pyproject.toml  requirements.txt  启动.txt
Mini-Agent-5-1/.mini-agent/: .history
Mini-Agent-5-1/docs/: DEVELOPMENT_GUIDE.md  DEVELOPMENT_GUIDE_CN.md  (+2 more)
data/: README.md
data_trans/: generate_sft_dataset.py  hybrid_tppm_injector.py  tppm_memory_bank.json  tppm_train_distill.json  train_per_session_lora.py
docs/: configuration.md  data_preparation.md  installation.md  privacy_and_safety.md
draft/: TPPM-draft.tex
results/: README.md
revise/: manuscript_anonymous.tex  ref.bib  reviewer1.md  水质检测返修意见.docx
sources/: research_abstract_style_20260701.md  research_contribution_style_20260701.md  research_experiment_setup_style_20260701.md
tests/: conftest.py  test_memory.py  test_paper_configuration.py
(+494 files in other folders)
